...

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/src"
        android:gravity="center"
        android:id="@+id/ingredient_layout"
        android:padding="20dp"
        >

        <RelativeLayout
            android:alpha="0.9"
            android:layout_marginTop="20dp"
...
            android:layout_marginRight="10dp"
            android:background="@drawable/rounded_bg_text_input"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:paddingLeft="5dp"
            android:layout_height="40dp"
            android:id="@+id/auto_complete_ingredient_container">



            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_ingredients"
                android:gravity="center"
                android:layout_width="220dp"
                android:backgroundTint="@android:color/transparent"
                android:layout_height="50dp">

                <EditText
                    android:id="@+id/auto_complete_ingredient"
                    android:layout_width="220dp"
                    android:backgroundTint="@android:color/transparent"
                    android:layout_height="50dp"
                    android:hint="Type ingredients"
                    android:layout_alignParentLeft="true"
                    android:text=""
...



        </RelativeLayout>

        <Button
            android:id="@+id/add"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:alpha="0.9"
            android:layout_height="40dp"
            android:layout_toRightOf="@id/auto_complete_ingredient_container"
            android:background="@drawable/bg_add_button"
...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_below="@id/auto_complete_ingredient_container">

        <Button
            android:id="@+id/id_type"
            android:alpha="0.9"
            android:layout_margin="5dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:background="@drawable/reounded_bg_category_type"
            android:text="recipe type"
            android:textSize="12dp"
            android:textColor="@color/colorPrimaryDark"/>

        <Button
            android:id="@+id/id_cuisine"
            android:alpha="0.9"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_margin="5dp"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:background="@drawable/reounded_bg_category_type"
            android:text="cuisine"
            android:textSize="12dp"
            android:textColor="@color/colorPrimaryDark"/>

        <Button
            android:id="@+id/id_diet"
            android:layout_margin="5dp"
            android:alpha="0.9"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:background="@drawable/reounded_bg_category_type"
            android:text="diet"
            android:textSize="12dp"
            android:textColor="@color/colorPrimaryDark"/>

        </LinearLayout>

    </RelativeLayout>
...
        </ScrollView>

    </LinearLayout>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/search_recipes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:clickable="true"
        android:elevation="4dp"
        android:src="@drawable/ic_search_"
...
