...
    tools:context="com.projeto_les.easymeal.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:id="@+id/content_layout"
        android:paddingTop="400dp"
        android:orientation="vertical"
        android:weightSum="5">


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_bg_transparent"
            android:gravity="center"
            android:padding="15dp"
            android:id="@+id/select_ingredients_btn"
            android:text="@string/select_ingredients"
            android:layout_alignParentTop="true"
            android:layout_weight="1"
            android:textColor="@android:color/white"
            android:drawableLeft="@drawable/ic_chef"
            android:textSize="20dp"
...
