<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clipToPadding="false"
    android:paddingBottom="10dp"
    >

    <LinearLayout
        android:orientation="horizontal"
        android:elevation="3dp"
        android:id="@+id/recipe_ll"
        android:background="@drawable/rounded_background_recipe_list"
        android:layout_width="match_parent"
        android:clickable="true"
        android:layout_height="100dp"
        >


        <ImageView
            android:layout_width="100dp"
            android:layout_margin="4dp"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:id="@+id/recipe_image"
            android:src="@drawable/ic_preparing"
            android:padding="5dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3">


            <TextView
                android:id="@+id/recipe_item_name"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:text="Name Name Name Name Name Name"
                android:padding="5dp"
                style="@style/TextAppearance.AppCompat.SearchResult.Subtitle"
                android:layout_alignParentLeft="true"
                android:layout_weight="2"/>

<!--
            <TextView
                android:id="@+id/have_ingredients"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1/2"
                android:layout_alignParentRight="true" /> -->

        </LinearLayout>

    </LinearLayout>


</LinearLayout>